--- a/hoteles/css/hoteles.css
+++ b/hoteles/css/hoteles.css
@@ -13,3 +13,13 @@
 #car3hotel {
   background-color: goldenrod;
 }
+#Modal{
+  position:fixed;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+  margin:auto;
+  dis
+
+}
